--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         }
         /* About Section */
         .about {
-            background-color: #ffffff;
+            background-color: #f1f1f1;
             color: #212529;
             padding: 50px 20px;
         }
