--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -92,7 +93,7 @@
         }
         /* About Section */
         .about {
-            background-color: #f1f1f1;
+            background-color: #ffffff;
             color: #212529;
             padding: 50px 20px;
         }
@@ -300,7 +301,7 @@
     <!-- Home Section -->
     <section id="home" class="home">
         <h1>Welcome to My Personal Website</h1>
-        <p>Hi, I’m Utsab Bastola, a passionate web developer from Nepal. Explore my work and feel free to connect with me.</p>
+        <p>Hi, I’m Utsab Bastola, a passionate individual from Nepal. Explore my work and feel free to connect with me.</p>
         <button class="cta-button" onclick="window.location.href='#contact'">Get Started</button>
     </section>
 
@@ -358,5 +359,8 @@
         <p>&copy; 2024 Utsab Bastola. All rights reserved.</p>
     </footer>
 
+    <!-- Chatbot Script -->
+    <script src="https://cdn.botpress.cloud/webchat/v2.1/inject.js"></script>
+    <script src="https://mediafiles.botpress.cloud/c0bef4e3-0e99-4003-9f52-7495ef6eee71/webchat/v2.1/config.js"></script>
 </body>
 </html>
