--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utsab Bastola's Website</title>
+    <link rel="icon" href="image.png" type="image/png"> <!-- Link to the favicon -->
     <style>
         /* General Styles */
         * {
